# elf-loader

./: CMakeLists.txt  main.cpp
elf/: loader.cpp  loader.h
include/elf/: loader.h
src/: loader.c
